finished adding retailer links to buttons, fixed button wrapping

--- a/src/styles/crackedcoffins.scss
+++ b/src/styles/crackedcoffins.scss
@@ -43,6 +43,11 @@ main {
   }
 }
 
+.buy-buttons {
+    display: flex;
+    flex-flow: wrap;
+}
+
 .cracked-coffins {
   background-color: $CrackedCoffins;
 }
